# chainable_iter

./: README.md  chainable.py  pyproject.toml  pytest.ini  test_chainable.py
chainable_iter/: __init__.py  chainable.py
